--- a/client/src/pages/misc.css
+++ b/client/src/pages/misc.css
@@ -1,7 +1,7 @@
+
 .home {
   display: flex;
   flex-direction: row;
-  /* padding-top: 5%; */
   justify-content: center;
   position: relative;
   padding-top: 100px;
@@ -32,14 +32,6 @@ a:hover {
   cursor: pointer;
 }
 
-/* .img {
-  position: relative;
-}
-
-.title {
-  position: absolute;
-
-} */
 
 .hover-link { 
   color: black;
@@ -80,4 +72,5 @@ a:hover {
 .follow-btn {
   padding-top: 2%;
 
-}
+} 
+
