--- a/client/src/pages/recipe.css
+++ b/client/src/pages/recipe.css
@@ -1,4 +1,4 @@
-.searchPage {
+/* .searchPage {
   display:flex;
   flex-direction: column;
   text-align: center;
@@ -7,4 +7,4 @@
 
 #search-container {
   padding-top: 100px;
-}
+} */
